@startuml

class Client{
    -Name: string
    +setName()
}
class Offer{
    -Price: float
    -Paint: Paint
    +getInfo()
}
class Venta{
    -Name: string
    -Direction: string
    -Price: float
    -Date: date
    +setName()
    +setDirection()
    +setPrice()
    +setDate()
}
class Gallery{
    -NumbPa: int
    -Paintings: vector<Paint>
}
Class Paint{
    -Price: float
    -Author: string
    +getPrice()
    +getAuthor()
}
Class Auctions{
    -listAucti: Auction
    +getInfo(string Auth, date Date)
}
class Auction{
    -Paintings: Paint
    -Price: float
    -Date: date
    +getAuthor()
    +getDate()
    +getCost()
}

Gallery o-- Paint
Auctions o-- Auction
Paint->Auctions
Offer - Client
(Offer, Client) -- Venta




@enduml